--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
-weasyprint
-braintree
-asgiref==3.2.5
+asgiref==3.3.1
 autopep8==1.4.4
+braintree==4.5.0
+cairocffi==1.2.0
+CairoSVG==2.5.1
 certifi==2020.4.5.1
-Django==3.0.7
-django-crispy-forms==1.9.0
+cffi==1.14.4
+chardet==4.0.0
+cssselect2==0.4.1
+defusedxml==0.6.0
+Django==3.1.5
+django-crispy-forms==1.10.0
+django-debug-toolbar==2.2
+html5lib==1.1
+idna==2.10
 olefile==0.46
-Pillow==7.0.0
+Pillow==8.1.0
 pycodestyle==2.5.0
+pycparser==2.20
+Pyphen==0.10.0
 pytz==2019.3
+requests==2.25.1
+six==1.15.0
 sqlparse==0.3.0
+tinycss2==1.1.0
+urllib3==1.26.2
+WeasyPrint==52.2
+webencodings==0.5.1
 wincertstore==0.2
